--- a/E-commerce/pom.xml
+++ b/E-commerce/pom.xml
@@ -105,7 +105,9 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+            <version>1.17.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
