--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@quasar/extras": "^1.17.0",
     "axios": "^1.13.2",
     "chart.js": "^4.4.1",
+    "element-plus": "^2.13.0",
     "pinia": "^3.0.4",
     "quasar": "^2.18.6",
     "vue": "^3.5.25",
