--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,14 +18,17 @@
     "axios": "^1.13.2",
     "chart.js": "^4.4.1",
     "element-plus": "^2.13.0",
+    "js-cookie": "^3.0.5",
     "pinia": "^3.0.4",
     "quasar": "^2.18.6",
     "vue": "^3.5.25",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.10.0",
     "@tsconfig/node24": "^24.0.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/tsconfig": "^0.8.1",
