--- a/E-commerce/src/main/resources/application.properties
+++ b/E-commerce/src/main/resources/application.properties
@@ -31,11 +31,11 @@ payment.linepay.confirm-url=http://localhost:8080/api/payment-gateway/callback/l
 payment.linepay.cancel-url=http://localhost:8080/api/payment-gateway/callback/linepay/cancel
 payment.linepay.sandbox=true
 
-# Payment Gateway Configuration - ECPay
-payment.ecpay.merchant-id=YOUR_ECPAY_MERCHANT_ID
-payment.ecpay.hash-key=YOUR_ECPAY_HASH_KEY
-payment.ecpay.hash-iv=YOUR_ECPAY_HASH_IV
+# Payment Gateway Configuration - ECPay (測試環境)
+payment.ecpay.merchant-id=2000132
+payment.ecpay.hash-key=5294y06JbISpM5x9
+payment.ecpay.hash-iv=v77hoKGq4kWxNNIS
 payment.ecpay.api-url=https://payment-stage.ecpay.com.tw
-payment.ecpay.return-url=http://localhost:8080/payment/result
-payment.ecpay.notify-url=http://localhost:8080/api/payment-gateway/callback/ecpay
+payment.ecpay.return-url=https://13d9786c4b4a.ngrok-free.app/payment/result
+payment.ecpay.notify-url=https://13d9786c4b4a.ngrok-free.app/api/payment-gateway/callback/ecpay
 payment.ecpay.sandbox=true
