--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "pinia": "^3.0.4",
     "quasar": "^2.18.6",
+    "shepherd.js": "^14.5.1",
     "vue": "^3.5.25",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.6.3"
