[feature] implement Google SSO login functionality and add configuration guide

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.17.0",
+    "@vueuse/core": "^14.1.0",
     "axios": "^1.13.2",
     "chart.js": "^4.4.1",
     "element-plus": "^2.13.0",
