--- a/frontend-official/package.json
+++ b/frontend-official/package.json
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.9",
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
+    "pinia": "^3.0.4",
     "quasar": "^2.14.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
