[feature] add functionality for setting album cover image and reordering images; update related API endpoints and UI components

--- a/E-commerce/src/main/resources/application.properties
+++ b/E-commerce/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=E-commerce
+﻿spring.application.name=E-commerce
 
 
 
@@ -20,8 +20,11 @@ jwt.expiration=86400000
 # File Upload Configuration
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-file.upload-dir=uploads/images
+# multipart request overhead (boundary / metadata) needs extra buffer beyond 10MB file size
+spring.servlet.multipart.max-request-size=12MB
+# 使用絕對路徑確保圖片可以被正確找到
+# 如果後端工作目錄不是專案根目錄，相對路徑可能會失敗
+file.upload-dir=C:/workSpace/E-commerce/shopro/E-commerce/uploads/images
 
 # Payment Gateway Configuration - LINE PAY
 payment.linepay.channel-id=YOUR_LINE_PAY_CHANNEL_ID
@@ -31,7 +34,7 @@ payment.linepay.confirm-url=http://localhost:8080/api/payment-gateway/callback/l
 payment.linepay.cancel-url=http://localhost:8080/api/payment-gateway/callback/linepay/cancel
 payment.linepay.sandbox=true
 
-# Payment Gateway Configuration - ECPay (測試環境)
+# Payment Gateway Configuration - ECPay (皜祈岫?啣?)
 payment.ecpay.merchant-id=2000132
 payment.ecpay.hash-key=5294y06JbISpM5x9
 payment.ecpay.hash-iv=v77hoKGq4kWxNNIS
