--- a/E-commerce/pom.xml
+++ b/E-commerce/pom.xml
@@ -18,7 +18,7 @@
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- 蝘駁 skipTests嚗??冽葫閰艾???急?頝喲??臭蝙??mvn install -DskipTests -->
+        <!-- 若需略過測試以加速建置，可使用 mvn install -DskipTests -->
     </properties>
 
     <dependencies>
